# pyqt5

./: .env.example  .gitignore  Makefile  README.md  app.py  configs.py  pyproject.toml  workers.py
